--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,61 @@ body {
   background: hsl(0deg, 0%, 98%);
 }
 
+.container {
+  width: 85vw;
+  margin: 0 auto;
+  max-width: 1440px;
+}
+
+.section {
+  padding: 4rem 0;
+}
+.section-header {
+  text-align: center;
+  margin-bottom: 6rem;
+}
+.section-header h1 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+.section-header h1 span {
+  font-weight: 200;
+}
+.section-header p {
+  color: hsl(229deg, 6%, 66%);
+  line-height: 1.6;
+}
+.section .card-center {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  align-items: center;
+  gap: 2rem;
+}
+.section .special-cards {
+  display: grid;
+  gap: 2rem;
+}
+.section .card {
+  background-color: white;
+  padding: 2rem;
+  border-radius: 5px;
+  border-top: 3px solid hsl(180deg, 62%, 55%);
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.064);
+}
+.section .card h2 {
+  margin-bottom: 0.5rem;
+  color: hsl(234deg, 12%, 34%);
+}
+.section .card p {
+  font-size: 0.8rem;
+  color: hsl(229deg, 6%, 66%);
+  line-height: 1.6;
+}
+.section .card-logo {
+  margin-top: 2.5rem;
+  margin-left: auto;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
