--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap");
 *,
 ::before,
 ::after {
@@ -20,6 +21,77 @@ a {
   text-decoration: none;
 }
 
+*,
+::before,
+::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-size: 15px;
+  font-family: "Poppins", sans-serif;
+}
+
+img {
+  display: block;
+}
+
+a {
+  text-decoration: none;
+}
+
+.card-center {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  align-items: center;
+  gap: 2rem;
+}
+
+.special-cards {
+  display: grid;
+  gap: 2rem;
+}
+
+#card, .card-4, .card-3, .card-2, .card-1 {
+  background-color: white;
+  padding: 2rem;
+  border-radius: 5px;
+  border-top: 3px solid transparent;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.064);
+}
+#card h2, .card-4 h2, .card-3 h2, .card-2 h2, .card-1 h2 {
+  margin-bottom: 0.5rem;
+  color: hsl(234deg, 12%, 34%);
+}
+#card p, .card-4 p, .card-3 p, .card-2 p, .card-1 p {
+  font-size: 0.8rem;
+  color: hsl(229deg, 6%, 66%);
+  line-height: 1.8;
+  padding-right: 2rem;
+}
+#card .card-logo, .card-4 .card-logo, .card-3 .card-logo, .card-2 .card-logo, .card-1 .card-logo {
+  margin-top: 3rem;
+  margin-left: auto;
+}
+
+.card-1 {
+  border-color: hsl(180deg, 62%, 55%);
+}
+
+.card-2 {
+  border-color: hsl(0deg, 78%, 62%);
+}
+
+.card-3 {
+  border-color: hsl(34deg, 97%, 64%);
+}
+
+.card-4 {
+  border-color: hsl(212deg, 86%, 64%);
+}
+
 body {
   background: hsl(0deg, 0%, 98%);
 }
@@ -39,6 +111,8 @@ body {
 }
 .section-header h1 {
   font-size: 1.5rem;
+  max-width: 400px;
+  margin: 0 auto;
   margin-bottom: 1rem;
 }
 .section-header h1 span {
@@ -47,36 +121,6 @@ body {
 .section-header p {
   color: hsl(229deg, 6%, 66%);
   line-height: 1.6;
-}
-.section .card-center {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  align-items: center;
-  gap: 2rem;
-}
-.section .special-cards {
-  display: grid;
-  gap: 2rem;
-}
-.section .card {
-  background-color: white;
-  padding: 2rem;
-  border-radius: 5px;
-  border-top: 3px solid hsl(180deg, 62%, 55%);
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.064);
-}
-.section .card h2 {
-  margin-bottom: 0.5rem;
-  color: hsl(234deg, 12%, 34%);
-}
-.section .card p {
-  font-size: 0.8rem;
-  color: hsl(229deg, 6%, 66%);
-  line-height: 1.6;
-}
-.section .card-logo {
-  margin-top: 2.5rem;
-  margin-left: auto;
 }
 
 .attribution {
