--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -18,8 +18,8 @@ body {
     margin-bottom: 6rem;
     h1 {
       font-size: 1.5rem;
-      max-width: 400px;
-      margin: 0 auto;
+      color: $cl-veryDarkBlue;
+
       margin-bottom: 1rem;
       span {
         font-weight: 200;
@@ -28,17 +28,29 @@ body {
     p {
       color: $cl-grayishBlue;
       line-height: 1.6;
-      //   max-width: 600px;
-      //   font-size: 0.8rem;
     }
   }
 }
-// Footer
 
+// Footer
+footer {
+  position: fixed;
+  padding: 0 0.5rem;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  min-width: 360px;
+}
 .attribution {
+  background: white;
   font-size: 11px;
   text-align: center;
+  font-size: 0.7rem;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+  font-weight: 700;
 }
+
+// Media queris
+@import "./utils/desktop";
