--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@ a {
   padding: 2rem;
   border-radius: 5px;
   border-top: 3px solid transparent;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.064);
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.138);
 }
 #card h2, .card-4 h2, .card-3 h2, .card-2 h2, .card-1 h2 {
   margin-bottom: 0.5rem;
@@ -74,7 +74,7 @@ a {
   padding-right: 2rem;
 }
 #card .card-logo, .card-4 .card-logo, .card-3 .card-logo, .card-2 .card-logo, .card-1 .card-logo {
-  margin-top: 3rem;
+  margin-top: 1.5rem;
   margin-left: auto;
 }
 
@@ -109,12 +109,12 @@ body {
 }
 .section-header {
   text-align: center;
-  margin-bottom: 6rem;
+  margin-bottom: 3rem;
 }
 .section-header h1 {
   font-size: 1.5rem;
   color: hsl(234deg, 12%, 34%);
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 .section-header h1 span {
   font-weight: 200;
@@ -171,8 +171,8 @@ a {
     width: 80vw;
   }
   .section h1 {
-    max-width: 700px;
-    font-size: 3rem;
+    max-width: 500px;
+    font-size: 2rem;
     margin: 0 auto;
     margin-bottom: 1rem;
   }
@@ -182,6 +182,7 @@ a {
     font-size: 0.8rem;
   }
   .section-header p {
-    font-size: 1rem;
+    width: 450px;
+    font-size: 0.8rem;
   }
 }
