--- a/scss/utils/_desktop.scss
+++ b/scss/utils/_desktop.scss
@@ -6,8 +6,8 @@
   }
   .section {
     h1 {
-      max-width: 700px;
-      font-size: 3rem;
+      max-width: 500px;
+      font-size: 2rem;
       margin: 0 auto;
       margin-bottom: 1rem;
     }
@@ -18,7 +18,8 @@
     }
     &-header {
       p {
-        font-size: 1rem;
+        width: 450px;
+        font-size: 0.8rem;
       }
     }
   }
